Bug 417054 - Changing name of brush undoes all unsaved changes
Summary: Changing name of brush undoes all unsaved changes
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Resource Management (other bugs)
Version First Reported In: nightly build (please specify the git hash!)
Platform: Microsoft Windows Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: Santhosh
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-02-02 10:21 UTC by Ralek Kolemios
Modified: 2021-03-08 23:27 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ralek Kolemios 2020-02-02 10:21:01 UTC
SUMMARY
Changing the name of a brush in the brush editor window will revert all changes made to the brush with no warning.

STEPS TO REPRODUCE
1. Create a new brush in the brush editor, change options to suit your needs.
2. Change the name at the top and click save

OBSERVED RESULT
You lose all your work on the brush

EXPECTED RESULT
Either a warning that changing the name will erase your changes, or it doesn't erase your changes.



Krita
  Version: 4.3.0-prealpha (git 7572e2d)

Qt
  Version (compiled): 5.12.5
  Version (loaded): 5.12.5

OS Information
  Build ABI: x86_64-little_endian-llp64
  Build CPU: x86_64
  CPU: x86_64
  Kernel Type: winnt
  Kernel Version: 10.0.17134
  Pretty Productname: Windows 10 (10.0)
  Product Type: windows
  Product Version: 10
Comment 1 Ahab Greybeard 2020-02-10 14:35:45 UTC
Setting to Confirmed because it does happen for me but in a different way:

Testing with the Feb 09 Nightly 4.3.0 prealpha appimage git-c4ce32e

I don't see this if I create a new brush preset, change its default settings and then rename the brush preset using the button at the top of the Brush editor. I tried this with various brush engines.

I do see this if I select an existing brush preset, even one that I've previosuly made myself, then edit its settings in the Brush Editor - if I change the name using the button at the top, all changes are immediately reverted and the saved new-named preset has the same setting as the original one.

 Version: 4.3.0-prealpha (git c4ce32e)
 Languages: en_GB, en, en, en_GB, en
 Hidpi: true

Qt

  Version (compiled): 5.12.5
  Version (loaded): 5.12.5

OS Information

  Build ABI: x86_64-little_endian-lp64
  Build CPU: x86_64
  CPU: x86_64
  Kernel Type: linux
  Kernel Version: 4.19.0-6-amd64
  Pretty Productname: Debian GNU/Linux 10 (buster)
  Product Type: debian
  Product Version: 10
Comment 2 Tiar 2021-03-08 23:27:01 UTC
Git commit 04397b62f51a17c914aecb6280044dcd9ee2b43d by Agata Cacko, on behalf of Santhosh Anguluri.
Committed on 08/03/2021 at 23:26.
Pushed by tymond into branch 'master'.

Preserve dirtiness when renaming a preset

Before this commit, unsaved preset settings are reset to
the original settings when the user renames a brush.
This commit ensures that the dirty settings are remembered
(but not saved into the newly renamed brush) and restored
after the renaming of the original brush preset.

M  +7    -1    libs/ui/widgets/kis_paintop_presets_popup.cpp

https://invent.kde.org/graphics/krita/commit/04397b62f51a17c914aecb6280044dcd9ee2b43d