Preserve dirtiness when renaming a preset

Before this commit, unsaved preset settings are reset to
the original settings when the user renames a brush.
This commit ensures that the dirty settings are remembered
(but not saved into the newly renamed brush) and restored
after the renaming of the original brush preset.

BUG:417054